# Noshy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  config.py  context.py  decorator.py  embed.py  extractor.py  hermes_skill.py  hooks.py  install.sh  noshy.py  pyproject.toml  server.py  store.py  store_factory.py
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
tests/: conftest.py  test_dashboard_endpoints.py  test_decorator.py  test_http_and_mcp.py  test_memoirs_and_projects.py  test_realistic_extraction.py  test_store.py  test_streaming.py
