[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aion-memory"
version = "0.1.0"
description = "Persistent memory for AI agents — MCP-native, works with any LLM"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
fastembed = ["fastembed>=0.4"]
all = ["fastembed>=0.4"]

[project.scripts]
aion = "server:main"

[project.urls]
Homepage = "https://github.com/noshkoto/aion"
Repository = "https://github.com/noshkoto/aion"

[tool.setuptools]
py-modules = ["store", "extractor", "embed", "server", "hermes_skill"]
