[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noshy"
version = "0.2.2"
description = "Persistent memory for AI agents — MCP-native, works with any LLM"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Noshkoto"}]
keywords = ["mcp", "memory", "llm", "ai", "agent", "claude", "rag", "vector-search", "icm", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
fastembed = ["fastembed>=0.4"]
sqlite-vec = ["sqlite-vec>=0.1"]
all = ["fastembed>=0.4", "sqlite-vec>=0.1"]
dev = ["pytest>=7", "build>=1", "twine>=5"]

[project.scripts]
noshy = "server:main"

[project.urls]
Homepage = "https://github.com/noshkoto/Noshy"
Repository = "https://github.com/noshkoto/Noshy"
Issues = "https://github.com/noshkoto/Noshy/issues"
Changelog = "https://github.com/noshkoto/Noshy/releases"

[tool.setuptools]
py-modules = ["store", "extractor", "embed", "server", "hermes_skill", "hooks", "context", "decorator", "noshy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
